--- a/infrastructure/jenkins/jenkins.template
+++ b/infrastructure/jenkins/jenkins.template
@@ -28,7 +28,7 @@
     "Type" : "String"
   },
 
-  "GithubOrganization" : {
+  "BitbucketOrganization" : {
     "Type" : "String"
   },
 
@@ -246,6 +246,8 @@
         "/usr/share/tomcat6/.ssh/config" : {
         "content" : { "Fn::Join" : ["", [
           "Host github.com\n",
+          "StrictHostKeyChecking no\n",
+          "Host bitbucket.org\n",
           "StrictHostKeyChecking no\n"
                   ]]},
         "mode"   : "000600",
@@ -319,14 +321,14 @@
 
       "# Update Jenkins with versioned configuration\n",
       "rm -rf /usr/share/tomcat6/.jenkins\n",
-      "git clone git@github.com:", { "Ref" : "GithubOrganization" }, "/", { "Ref" : "ProjectName" }, "_jenkins.git /usr/share/tomcat6/.jenkins\n",
+      "git clone https://", { "Ref" : "BitbucketUsername" }, "@bitbucket.org/", { "Ref" : "BitbucketOrganization" }, "/", { "Ref" : "ProjectName" }, "_jenkins.git /usr/share/tomcat6/.jenkins\n",
 
-          "wget -P /tmp/ https://raw.github.com/stelligent/continuous_delivery_open_platform/master/lib/boot.rb --no-check-certificate\n",
-      "wget -P /tmp/ https://raw.github.com/stelligent/continuous_delivery_open_platform/master/lib/stack_builder.rb --no-check-certificate\n",
-      "wget -P /tmp/ https://raw.github.com/stelligent/continuous_delivery_open_platform/master/lib/cd_security_group.rb --no-check-certificate\n",
-      "wget -P /tmp/ https://raw.github.com/stelligent/continuous_delivery_open_platform/master/lib/terminate_instance.rb --no-check-certificate\n",
-      "wget -P /tmp/ https://raw.github.com/stelligent/continuous_delivery_open_platform/master/lib/set_properties.rb --no-check-certificate\n",
-      "wget -P /tmp/ https://raw.github.com/stelligent/continuous_delivery_open_platform/master/lib/search_and_replace_git_repo.rb --no-check-certificate\n",
+          "wget -P /tmp/ https://raw.github.com/lapyu/continuous_delivery_open_platform/master/lib/boot.rb --no-check-certificate\n",
+      "wget -P /tmp/ https://raw.github.com/lapyu/continuous_delivery_open_platform/master/lib/stack_builder.rb --no-check-certificate\n",
+      "wget -P /tmp/ https://raw.github.com/lapyu/continuous_delivery_open_platform/master/lib/cd_security_group.rb --no-check-certificate\n",
+      "wget -P /tmp/ https://raw.github.com/lapyu/continuous_delivery_open_platform/master/lib/terminate_instance.rb --no-check-certificate\n",
+      "wget -P /tmp/ https://raw.github.com/lapyu/continuous_delivery_open_platform/master/lib/set_properties.rb --no-check-certificate\n",
+      "wget -P /tmp/ https://raw.github.com/lapyu/continuous_delivery_open_platform/master/lib/search_and_replace_git_repo.rb --no-check-certificate\n",
 
       "# Set SNS Topic Property\n",
       "ruby /tmp/set_properties.rb --sdbdomain ", { "Ref" : "SetupTemplate" }, " --itemname properties --property SNSTopic --value ", { "Ref" : "MySNSTopic" }, "\n",
@@ -339,7 +341,7 @@
       "echo \"export JENKINS_ENVIRONMENT=", { "Ref" : "ApplicationName" }, "\" >> /etc/sysconfig/tomcat6\n",
       "echo \"export SIMPLEDB_STACK=", { "Ref" : "SetupTemplate" }, "\" >> /etc/sysconfig/tomcat6\n",
       "echo \"export PROJECT_NAME=", { "Ref" : "ProjectName" }, "\" >> /etc/sysconfig/tomcat6\n",
-      "echo \"export ORGANIZATION=", { "Ref" : "GithubOrganization" }, "\" >> /etc/sysconfig/tomcat6\n",
+      "echo \"export ORGANIZATION=", { "Ref" : "BitbucketOrganization" }, "\" >> /etc/sysconfig/tomcat6\n",
 
 
       "chown -R tomcat:tomcat /usr/share/tomcat6/\n",
