Fixed the missing jenkins stack call

--- a/infrastructure/jenkins/jenkins.template
+++ b/infrastructure/jenkins/jenkins.template
@@ -28,6 +28,10 @@
     "Type" : "String"
   },
 
+  "BitbucketUsername" : {
+    "Type" : "String"
+  },
+
   "BitbucketOrganization" : {
     "Type" : "String"
   },
